Add two users and their vehicles on startup. Added a UserNotFoundException. Added a thymeleaf vehiclecreatepage and mappings to add a vehicle to a user.