@@ -21,7 +21,8 @@ public class DriveDokEventListeners implements ApplicationListener<ContextRefres
     private final VehicleService vehicleService;
     private final UserService userService;
 
-    Set<Vehicle> vehicles;
+    Set<Vehicle> sjaaksVehicles;
+    Set<Vehicle> piensVehicles;
 
     public DriveDokEventListeners(ParkingZoneService parkingZoneService,
                                   ParkingSpotService parkingSpotService,
@@ -60,16 +61,23 @@ public class DriveDokEventListeners implements ApplicationListener<ContextRefres
     }
 
     private void createDummyVehicles() {
-        vehicles = Set.of(
-                new Vehicle("Ben's iene miene mutte auto", "H-000-B", ParkingType.NORMAL, Collections.emptySet()),
-                new Vehicle("Tess's sla", "H-001-C", ParkingType.ELECTRIC, Collections.emptySet()),
-                new Vehicle("Zo Fiets", "H-002-D", ParkingType.NORMAL, Collections.emptySet())
+        sjaaksVehicles = Set.of(
+                new Vehicle("Auto van de Sjaak", "H-000-B", ParkingType.NORMAL, Collections.emptySet()),
+                new Vehicle("Electrische auto", "H-001-C", ParkingType.ELECTRIC, Collections.emptySet()),
+                new Vehicle("Zonnepaneel fiets", "H-002-D", ParkingType.DISABLED, Collections.emptySet())
         );
-        vehicles.forEach(vehicleService::create);
+        piensVehicles = Set.of(
+                new Vehicle("Volkswagen Pino", "H-000-E", ParkingType.ELECTRIC, Collections.emptySet()),
+                new Vehicle("Motor", "H-001-F", ParkingType.NORMAL, Collections.emptySet())
+        );
+        sjaaksVehicles.forEach(vehicleService::create);
+        piensVehicles.forEach(vehicleService::create);
     }
 
     private void createDummyUser() {
-        var user1 = new User("Joep", "joep@joepmail.com", "password123", vehicles);
+        var user1 = new User("Sjaak", "sjaak@email.nl", "password123", sjaaksVehicles);
         userService.create(user1);
+        var user2 = new User("Pien", "pien@email.nl", "zomer2020", piensVehicles);
+        userService.create(user2);
     }
 }
